--- a/index.html
+++ b/index.html
@@ -3,15 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <title>💖Igor Mesquita - Minha página pessoal💖</title>
+    <link rel="stylesheet" href="CSS\style.css" />
   </head>
 
-  <body>
-    <img src="eu2.jpeg" alt="" width="200" />
-    <h1>Igor Mesquita</h1>
-    <p>
-      <em><strong>Desenvolvedor Back-end</strong></em>
-    </p>
-    <p>Atualmente estou cursando Análise e Desenvolvimento de Sistemas.💻</p>
+  <body class="fundo">
+    <table>
+      <thead>
+        <tr>
+          <td>
+            <img src="eu2.jpeg" alt="" width="200" />
+          </td>
+          <td>
+            <h1>Igor Mesquita</h1>
+            <p>
+              <em><strong>Desenvolvedor Back-end</strong></em>
+            </p>
+            <p>
+              Atualmente estou cursando Análise e Desenvolvimento de Sistemas.💻
+            </p>
+          </td>
+        </tr>
+      </thead>
+    </table>
+
     <p>
       Veja meu
       <a href="https://www.linkedin.com/in/igor-mesquita-dev/">LinkedIn</a>
